...
                    height: 1.5,
                    fontWeight: FontWeight.w500,
                    color: Colors.black.withOpacity(.7))),
            const Spacer(),
            const SizedBox(height: 10),
            CupertinoButton(
              key: const Key('create_new_wallet'),
              color: Colors.black,
              padding: const EdgeInsets.symmetric(horizontal: 30, vertical: 15),
              onPressed: () {
                Navigator.of(context).push(MaterialPageRoute(
                    builder: (context) => const CreateBdkWallet()));
              },
...
