...
                    color: Colors.blue,
                    size: 30,
                  ),
                  centerTitle: false,
                  actions: [
                    IconButton(
                        key: const Key('sync_button'),
                        onPressed: () {
                          context.read<WalletBloc>().add(WalletEvent.sync(
                              blockchainBloc
                                  .state.blockchainEntity!.blockchain!));
                        },
                        icon: const Icon(
...
