...
          child: PageView(
            controller: pageController,
            physics: const NeverScrollableScrollPhysics(),
            onPageChanged: pageChanged,
            children: const [
              Home(),
              Send(),
              Receive(),
              LoadBdkWallet()
            ],
          ),
        ),
        floatingActionButton: FloatingActionButton(
...
